[package]
name = "rocksdb-test-vectors"
version = "0.1.0"
edition = "2021"
description = "RocksDB test vectors for TOS/Avatar compatibility"

[workspace]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hex = "0.4"

[[bin]]
name = "gen_serialization_vectors"
path = "gen_serialization_vectors.rs"

[[bin]]
name = "gen_key_format_vectors"
path = "gen_key_format_vectors.rs"

[[bin]]
name = "gen_database_vectors"
path = "gen_database_vectors.rs"
