[package]
name = "factory-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"

# Note: In a real implementation, you would use tos-sdk
# For this example, we provide a minimal interface
